# NLQ-Agent

./: .gitignore  README.md  pyproject.toml
agent/: agent.py
db_mcp_server/: create_vector_db.py  main.py  table_infos.pkl
